clean up contact info and footer

--- a/templates/project-status.html
+++ b/templates/project-status.html
@@ -85,7 +85,7 @@
     <footer class="bg-gray-100 border-t border-gray-200 mt-12">
         <div class="container mx-auto px-4 py-8">
             <p class="text-center text-gray-600">
-                © 2025 {FIRM_NAME}. For more information about this project, contact our office at {CONTACT_PHONE}.
+                © 2025 {FIRM_NAME}. For more information about this project, contact us at <a href="mailto:nic@mydigitalharbor.com">nic@mydigitalharbor.com</a>.
             </p>
         </div>
     </footer>
